--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/solid-query": "^5.15.5",
     "@tanstack/solid-table": "^8.11.2",
     "autoprefixer": "^10.4.14",
+    "json-server": "^0.17.4",
     "postcss": "^8.4.26",
     "solid-js": "^1.8.7",
     "tailwindcss": "^3.3.3",
